--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
  <html>
   <head>
-    <title>WonderfulMemoApp</title>
+    <title>WonderfulPostApp</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -10,8 +10,9 @@
   </head>
 
   <body>
-   <div class="container">
+    <%= render partial: "layouts/navbar" %>
+    <div class="container">
       <%= yield %>
-   </div>
+    </div>
   </body>
  </html>
